refactor(tests): Testing exceptions with only one possible invocation throwing (#418)
Refactor tests that check for exceptions to have only a single call in the calling code that could throw a RuntimeException.

Refactor to use `assertThatThrownBy()` for checking code for exceptions thrown.

Resolve usage of deprecated method `FormService#submitTaskFormData` by `#submitForm`

Cleanups:
- Replace lowercase 'l' by 'L' for long literals
- Replace `Arrays.asList` by `List.of()`
- Rename variables named `var`
- Replace statement lambda by expression lambda
- Remove obsolete usages of ArgumentsMatchers#eq

related to #88, #27